# ci-exercise-np6947

./: .pre-commit-config.yaml  noxfile.py  pyproject.toml
.github/workflow/: ci.yml
docs/: conf.py
src/: pyproject.toml
src/src/unc/: __init__.py
