[project]
name = "unc"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Napoleon Pempena", email = "napoleon@princeton.edu" }
]
requires-python = ">=3.11"
dependencies = [
 	"typing_extensions; python_version < '3.11'"
]

[project.optional-dependencies]

test = [
	"pytest",
	"uncertainties"
]

extra = [
	"sphinx", 
	"furo", 
	"myst_parser"
]

[tool.ruff]
line-length = 120 # YOLO
target-version = "py311"

[tool.ruff.lint]
extend-select = ["B", "I", "RUF", "UP"]

[tool.ruff.format]
quote-style = ["single"]
indent-style = ["tab"]

[build-system]
requires = ["hatchling"]
build-backend = ["hatchling.build"]

[tool.hatch.build.targets.wheel]
packages = ["src/unc"]
