[project]
name = "unc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Napoleon Pempena", email = "napoleon@princeton.edu" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
